# bfrl

./: .gitignore  CMakeLists.txt
cmake/: config.h.in
examples/: .gitignore  CMakeLists.txt  console.c
include/: export.h
include/bfrl/: readline.h
src/: clipbrd.c  cursor.c  history.c  readline.c
